--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :category %>
+  <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"], prompt: "Select category" %>
   <%= f.input :phone_number %>
 
   <%= f.button :submit %>
