--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,10 @@
 <h1>New review for <%= @restaurant.name %></h1>
 
-<%= simple_form_for(@review) do |f| %>
+<%= simple_form_for([@restaurant, @review]) do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :content %>
-  <%= f.input :rating %>
+    <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5], prompt: "Select rating" %>
 
   <%= f.button :submit %>
 <% end %>
