--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,21 @@
-<h1>All restaurants</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <h1>Where are you going to eat today?</h1>
+    </div>
+  </div>
 
-<% @restaurants.each do |restaurant| %>
-<ul>
-  <li><%= restaurant.name%></li>
-</ul>
-
-<% end %>
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <% @restaurants.each do |restaurant| %>
+        <ul class="list-inline">
+          <li>
+            <%= link_to restaurant_path(restaurant) do %>
+              <h5><%= restaurant.name%></h5>
+            <% end %>
+          </li>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+</div>
