--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,13 +1,22 @@
-<h1>Create a new restaurant</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+      <h1>Create a new restaurant</h1>
+    </div>
+  </div>
 
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.error_notification %>
+  <div class="row">
+    <div class="col-xs-12 col-md-4 col-md-offset-4 padded">
+      <%= simple_form_for @restaurant do |f| %>
+      <%= f.error_notification %>
 
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :category %>
-  <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"], prompt: "Select category" %>
-  <%= f.input :phone_number %>
+      <%= f.input :name %>
+      <%= f.input :address %>
+      <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"], prompt: "Select category" %>
+      <%= f.input :phone_number %>
 
-  <%= f.button :submit %>
-<% end %>
+      <%= f.button :submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
