--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,8 +1,34 @@
-<h1><%= @restaurant.name %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+      <h1><%= @restaurant.name %></h1>
+    </div>
+    <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+      <%= link_to new_restaurant_review_path(@restaurant), {class: "btn btn-primary"} do %>
+        <h5>Create new review for <%= @restaurant.name %></h5>
+      <% end %>
+    </div>
+  </div>
 
-<h2>Category</h2>
-<p><%= @restaurant.category.capitalize %></p>
-<h2>Address</h2>
-<p><%= @restaurant.address %></p>
-<h2>Phone Number</h2>
-<p><%= @restaurant.phone_number %></p>
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-4">
+      <h3>Category</h3>
+      <p><%= @restaurant.category.capitalize %></p>
+      <h3>Address</h3>
+      <p><%= @restaurant.address %></p>
+      <h3>Phone Number</h3>
+      <p><%= @restaurant.phone_number %></p>
+      <h3>Reviews</h3>
+      <% @restaurant.reviews.each do |review| %>
+        <ul>
+          <li>
+            <%= review.content%>
+          </li>
+          <li>
+            <%= review.rating%>
+          </li>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+</div>
