--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,18 @@
-<h1>New review for <%= @restaurant.name %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+      <h1>New review for <%= @restaurant.name %></h1>
+    </div>
+  </div>
 
-<%= simple_form_for([@restaurant, @review]) do |f| %>
-  <%= f.error_notification %>
-
-  <%= f.input :content %>
-    <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5], prompt: "Select rating" %>
-
-  <%= f.button :submit %>
-<% end %>
+  <div class="row">
+    <div class="col-xs-12 col-md-4 col-md-offset-4 padded">
+      <%= simple_form_for [@restaurant, @review] do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :content %>
+        <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5], prompt: "Select rating" %>
+        <%= f.button :submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
