--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,12 +7,23 @@
 
   <div class="row">
     <div class="col-xs-12 col-md-4 col-md-offset-4 padded">
-      <%= simple_form_for [@restaurant, @review] do |f| %>
-        <%= f.error_notification %>
-        <%= f.input :content %>
-        <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5], prompt: "Select rating" %>
-        <%= f.button :submit %>
-      <% end %>
+      <div class="card" style="background-image: url('https://unsplash.it/1000/400?image=1');" data-sr>
+        <div class="card-shadow">
+          <div class="card-link">
+            <a href="http://www.google.com"></a>
+          </div>
+          <div class="card-description">Popular</div>
+            <div class="card-text">
+              <%= simple_form_for [@restaurant, @review] do |f| %>
+                <%= f.error_notification %>
+                <%= f.input :content %>
+                <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5], prompt: "Select rating" %>
+                <%= f.button :submit %>
+              <% end %>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
+
 </div>
